--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "updatetest": "lerna run updatetest --stream --parallel"
   },
   "devDependencies": {
+    "@stylistic/stylelint-plugin": "^2.1.0",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
@@ -34,10 +35,13 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lodash": "^7.2.0",
     "lerna": "^6.5.1",
-    "stylelint": "^16.0.0",
+    "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^4.6.2",
     "walk-sync": "^2.0.2"
+  },
+  "dependencies": {
+    "postcss": "^8.4.35"
   }
 }
