--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
