--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -6,6 +6,8 @@ on:
     #     tags:
     #       - 'v[0-9]+.[0-9]+.[0-9]+'
     pull_request:
+        branches:
+          - master
         types:
           - closed
 
