--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -6,8 +6,6 @@ on:
     #     tags:
     #       - 'v[0-9]+.[0-9]+.[0-9]+'
     pull_request:
-        branches:
-          - master
         types:
           - closed
 
@@ -17,7 +15,7 @@ concurrency:
 
 jobs:
     check-pr-label:
-        if: ${{ github.event.pull_request.merged == true }} && ${{ github.event.pull_request.base.ref == 'master' }}
+        if: ${{ github.event.pull_request.merged == true }}
         runs-on: ubuntu-latest
         
         steps:
