--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -52,17 +52,15 @@ jobs:
               TEXT_BODY: ${{ github.event.pull_request.body }}
                 
           - name: Assign label based on version impact
-            run: echo "${CHOSEN_LABEL}"
-            # uses: actions/github-script@v7
-
-            # with:
-            #     script: |
-            #         github.rest.issues.addLabels({
-            #             owner: context.repo.owner,
-            #             repo: context.repo.repo,
-            #             issue_number: context.payload.pull_request.number,
-            #             labels: ["$CHOSEN_LABEL"]
-            #         })
+            uses: actions/github-script@v7
+            with:
+                script: |
+                    github.rest.issues.addLabels({
+                        issue_number: context.payload.pull_request.number,
+                        owner: context.repo.owner,
+                        repo: context.repo.repo,
+                        labels: ['${CHOSEN_LABEL}']
+                    })
             env:
                 CHOSEN_LABEL: ${{ steps.check_pr_description_label.outputs.chosen_label }}
 
