--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -25,12 +25,12 @@ jobs:
               is_minor=$(echo "$proposed_version_impact" | grep -qi '\[X\] Minor'; echo $?)
               is_patch=$(echo "$proposed_version_impact" | grep -qi '\[X\] Patch'; echo $?)
               sum=$(($is_major + $is_minor + $is_patch))
-              echo "$sum" >> $GITHUB_OUTPUT
+              echo "sum=$sum" >> $GITHUB_OUTPUT
               if [[ "$sum" -eq 3 ]]; then
-                echo "3"
+                echo "3 here"
                 echo "message=$(echo "@${MERGE_AUTHOR} Each PR must have a SEMVER impact label, please label the PR properly.")" >> $GITHUB_OUTPUT
               elif [[ "$sum" -le 1 ]]; then
-                echo "1"
+                echo "1 here"
                 echo "message=$(echo "@${MERGE_AUTHOR} Each PR can only have one SEMVER impact label, please label the PR properly.")" >> $GITHUB_OUTPUT
               else
                 echo "message=$(echo "SEMVER impact selected.")" >> $GITHUB_OUTPUT
@@ -53,6 +53,8 @@ jobs:
             uses: actions/github-script@v7
             with:
                 script: |
+                    echo $SUM
+                    echo $MESSAGE
                     if (process.env.SUM != 2) {
                       github.rest.issues.createComment({
                         issue_number: context.payload.pull_request.number,
