--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -12,7 +12,6 @@ jobs:
     check-pr-label:
         if: ${{ github.event.pull_request.merged }}
         runs-on: ubuntu-latest
-        
         steps:
           - uses: actions/checkout@v3
           - name: Check for PR description label
@@ -24,12 +23,12 @@ jobs:
               is_major=$(echo "$proposed_version_impact" | grep -qi '\[X\] Major'; echo $((1-$?)))
               is_minor=$(echo "$proposed_version_impact" | grep -qi '\[X\] Minor'; echo $((1-$?)))
               is_patch=$(echo "$proposed_version_impact" | grep -qi '\[X\] Patch'; echo $((1-$?)))
-              sum=$(($is_major + $is_minor + $is_patch))
-              echo "sum=$sum" >> $GITHUB_OUTPUT
-              if [[ "$sum" -eq 0 ]]; then
-                echo "message=$(echo "@${MERGE_AUTHOR} Each PR must have a SEMVER impact label, remember to label the PR properly.")" >> $GITHUB_OUTPUT
-              elif [[ "$sum" -ge 2 ]]; then
-                echo "message=$(echo "@${MERGE_AUTHOR} Each PR can only have one SEMVER impact label, remember to label the PR properly.")" >> $GITHUB_OUTPUT
+              num_labels_chosen=$(($is_major + $is_minor + $is_patch))
+              echo "num_labels_chosen=$num_labels_chosen" >> $GITHUB_OUTPUT
+              if [[ "$num_labels_chosen" -eq 0 ]]; then
+                echo "message=$(echo "@${MERGE_AUTHOR} Each PR must have a SEMVER impact label, please remember to label the PR properly.")" >> $GITHUB_OUTPUT
+              elif [[ "$num_labels_chosen" -ge 2 ]]; then
+                echo "message=$(echo "@${MERGE_AUTHOR} Each PR can only have one SEMVER impact label, please remember to label the PR properly.")" >> $GITHUB_OUTPUT
               else
                 echo "message=$(echo "SEMVER impact selected.")" >> $GITHUB_OUTPUT
                 echo "chosen_label=$(
@@ -42,16 +41,14 @@ jobs:
                     fi
                  )" >> $GITHUB_OUTPUT
               fi
-
             env:
               TEXT_BODY: ${{ github.event.pull_request.body }}
               MERGE_AUTHOR: ${{ github.event.pull_request.merged_by.login }}
-                
           - name: Assign label based on version impact
             uses: actions/github-script@v7
             with:
                 script: |
-                    if (process.env.SUM != 1) {
+                    if (process.env.NUM_LABELS_CHOSEN != 1) {
                       github.rest.issues.createComment({
                         issue_number: context.payload.pull_request.number,
                         owner: context.repo.owner,
@@ -67,9 +64,6 @@ jobs:
                         });
                     }
             env:
-                SUM: ${{ steps.check_pr_description_label.outputs.sum }}
+                NUM_LABELS_CHOSEN: ${{ steps.check_pr_description_label.outputs.num_labels_chosen }}
                 MESSAGE: ${{ steps.check_pr_description_label.outputs.message }}
                 CHOSEN_LABEL: ${{ steps.check_pr_description_label.outputs.chosen_label }}
-
-
-    
