--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -10,6 +10,8 @@ concurrency:
 
 jobs:
     check-pr-label:
+        permissions:
+          issues: write
         if: ${{ github.event.review.state == 'approved' }}
         runs-on: ubuntu-latest
         steps:
