Adapt code/index to Typescript
Adapt code/index to Typescript

--- a/.eslintignore
+++ b/.eslintignore
@@ -24,6 +24,7 @@ packages/core/src/Site/*.js
 packages/core/src/utils/*.js
 packages/core/src/variables/*.js
 packages/core/test/unit/**/*.js
+packages/core/index.js
 
 # Rules for pure JS files
 packages/core/src/lib/markdown-it/patches/*
