--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,6 @@ packages/core/src/Site/*.js
 packages/core/src/utils/*.js
 packages/core/src/variables/*.js
 packages/core/test/unit/**/*.js
+packages/core/index.js
 
 # --- packages/core end ---
