--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "^9.0.1",
     "live-server": "1.2.1",
     "lodash": "^4.17.15",
+    "pagefind": "^1.0.4",
     "url-parse": "^1.5.10",
     "winston": "^2.4.4",
     "winston-daily-rotate-file": "^3.10.0"
