--- a/.github/workflows/new-contributor.yml
+++ b/.github/workflows/new-contributor.yml
@@ -1,44 +1,44 @@
 name: New Contributor Action
 on: 
     pull_request_target:
-        types:
-          - closed
+        types: [closed]
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
     cancel-in-progress: true
 
 jobs:
-  ping-new-contributor:
+  check-new-contributor:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v7
+      - name: Check new contributor
+        uses: actions/github-script@v7
         with:
           script: |
-            const creator = context.payload.sender.login
-            const opts = github.rest.issues.listForRepo.endpoint.merge({
-              ...context.issue,
-              creator,
-              state: 'all'
-            })
-            const issues = await github.paginate(opts)
+            const prAuthor = context.payload.pull_request.user.login;
+            const repoOwner = context.repo.owner;
+            const repoName = context.repo.repo;
+            const mergedPRs = await github.paginate(
+              github.rest.pulls.list,
+              {
+                owner: repoOwner,
+                repo: repoName,
+                state: 'closed',
+                per_page: 100
+              },
+              (response) => response.data.filter(pr => pr.merged_at != null && pr.user.login === prAuthor)
+            );
+            if (mergedPRs.length === 0) {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: `**Welcome**, new contributor!
 
-            for (const issue of issues) {
-              if (issue.number === context.issue.number) {
-                continue
-              }
-
-              if (issue.pull_request) {
-                return // Creator is already a contributor.
-              }
+                  Do remember to request someone to add you as a official contributor to our repository, if you want to of course! See the full list of contributors [here](https://markbind.org/about.html) ✨`
+              });
             }
-
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `**Welcome**, new contributor!
-
-                Do remember to request someone to add you as a official contributor to our repository, if you want to of course! See the full list of contributors [here](https://markbind.org/about.html) ✨`
-            })
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
