--- a/.github/workflows/new-contributor.yml
+++ b/.github/workflows/new-contributor.yml
@@ -11,31 +11,33 @@ jobs:
   check-new-contributor:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
+    permissions: 
+      pull-requests: write
     steps:
       - name: Check new contributor
         uses: actions/github-script@v7
         with:
           script: |
             const prAuthor = context.payload.pull_request.user.login;
-            console.log(prAuthor);
-            const contributors = await github.paginate(
-              github.rest.repos.listContributors, {
-                owner: context.repo.owner,
-                repo: context.repo.repo
-              }
+            const repoOwner = context.repo.owner;
+            const repoName = context.repo.repo;
+            const currentPR = context.payload.pull_request.number;
+            const mergedPRs = await github.paginate(
+              github.rest.pulls.list,
+              {
+                owner: repoOwner,
+                repo: repoName,
+                state: 'closed',
+                per_page: 100
+              },
+              (response) => response.data.filter(pr => pr.merged_at != null && pr.user.login === prAuthor && pr.number !== currentPR)
             );
-            console.log(contributors);
-
-            const isAlreadyContributor = contributors.some(contributor => contributor.login === prAuthor);
-            console.log(isAlreadyContributor);
-
-            if (!isAlreadyContributor) {
+            if (mergedPRs.length == 0) {
               github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: `**Welcome**, @${prAuthor}! 🎉 Thank you for your contribution to the MarkBind project!
-                  Do remember to request someone to add you as a official contributor to our repository, if you want to of course! See the full list of contributors [here](https://markbind.org/about.html) ✨`
+                issue_number: context.payload.pull_request.number,
+                owner: repoOwner,
+                repo: repoName,
+                body: `**Welcome**, @${prAuthor}! 🎉 Thank you for your contribution to the MarkBind project!\n\nDo remember to request someone to add you as a official contributor to our repository, if you want to of course! See the full list of contributors [here](https://markbind.org/about.html). ✨`
               });
             }
         env:
