--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -40,6 +42,7 @@
     "walk-sync": "^2.0.2"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "postcss": "^8.4.35"
   }
 }
