--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ packages/cli/test/functional/test_site/expected/diagrams/sequence.png
 packages/cli/test/functional/test_site/expected/diagrams/state.png
 packages/cli/test/functional/test_site/expected/diagrams/usecase.png
 packages/cli/test/functional/test_site/expected/sub_site/inline-output/inline-puml-image.png
+packages/cli/test/functional/test_site_templates/test_project/expected/diagrams/example.png
 
 # vscode configuration
 .vscode/
