--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -19,7 +19,7 @@ jobs:
           message: ${{ steps.check_pr_description_label.outputs.message }}
           chosen_label: ${{ steps.check_pr_description_label.outputs.chosen_label }}
         steps:
-          - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+          - uses: actions/checkout@v3
 
           - name: Check for PR description label
             id: check_pr_description_label
@@ -59,7 +59,7 @@ jobs:
         permissions:
             pull-requests: write
         steps:
-          - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
+          - uses: actions/github-script@v7
             with:
               script: |
                 if (process.env.NUM_LABELS_CHOSEN != 1) {
