--- a/.github/workflows/pr-message-reminder.yml
+++ b/.github/workflows/pr-message-reminder.yml
@@ -24,7 +24,7 @@ jobs:
           contents: read
     
         steps:
-          - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+          - uses: actions/checkout@v3
           - name: Extract Proposed Commit Message
             run: |
               python scripts/process_message.py "${TEXT_BODY}" > processed_body.txt
