--- a/.github/workflows/new-contributor.yml
+++ b/.github/workflows/new-contributor.yml
@@ -23,7 +23,7 @@ jobs:
             const repoOwner = context.repo.owner;
             const repoName = context.repo.repo;
             const currentPR = context.payload.pull_request.number;
-            const mergedPRs = await github.paginate(
+            const previouslyMergedPRsByAuthor = await github.paginate(
               github.rest.pulls.list,
               {
                 owner: repoOwner,
@@ -33,7 +33,7 @@ jobs:
               },
               (response) => response.data.filter(pr => pr.merged_at != null && pr.user.login === prAuthor && pr.number !== currentPR)
             );
-            if (mergedPRs.length == 0) {
+            if (previouslyMergedPRsByAuthor.length == 0) {
               const welcomeMessage = `**Welcome**, @${prAuthor}! 🎉 Thank you for your contribution to the MarkBind project!\n\n@${prMerger}, please remember to add @${prAuthor} as an official contributor to our repository.\n\nSee the full list of contributors [here](https://markbind.org/about.html). ✨`;
               github.rest.issues.createComment({
                 issue_number: currentPR,
