--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -51,7 +51,7 @@ jobs:
               TEXT_BODY: ${{ github.event.pull_request.body }}
               MERGE_AUTHOR: ${{ github.event.sender.login }}
 
-    assign-label-or-comment:
+    assign-label-or-reminder:
         if: ${{ github.event.pull_request.merged }}
         runs-on: ubuntu-latest
         needs: check-pr-label
