GitHub Actions: improve security
Security best practices need to be enforced to ensure no avenues
of attack and security breaches.

Let's update the workflows following security best practices,
particularly restricting permissions to read permissions

--- a/.github/workflows/pr-message-reminder.yml
+++ b/.github/workflows/pr-message-reminder.yml
@@ -20,6 +20,8 @@ jobs:
     remind-pr-author:
         if: github.event_name == 'pull_request'
         runs-on: ubuntu-latest
+        permissions:
+          contents: read
     
         steps:
           - uses: actions/checkout@v3
