feat: add install setuptools to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - run: pip install setuptools
       - run: npm run setup
       - run: npm run test
       - name: Upload coverage report to Codecov
