--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig_base.json",
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+  },
   "exclude": ["node_modules"]
 }
