--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -27,9 +27,10 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.10.5",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.3.6",
+    "@vue/vue2-jest": "^27.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.1.0",
@@ -41,7 +42,6 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
     "vue-final-modal": "^2.4.1",
-    "vue-jest": "^3.0.6",
     "vue-loader": "^15.9.3"
   },
   "private": true
