--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prebuild:backend": "npm run clean",
     "build:backend": "tsc --noEmitOnError",
@@ -36,7 +38,7 @@
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^4.6.2",
+    "typescript": "^5.7.3",
     "walk-sync": "^2.0.2"
   },
   "dependencies": {
