--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,6 +33,8 @@
     "@primer/octicons": "^15.0.1",
     "@sindresorhus/slugify": "^0.9.1",
     "@tlylt/markdown-it-imsize": "^3.0.0",
+    "@vue/compiler-sfc": "3.3.11",
+    "@vue/server-renderer": "3.3.11",
     "bluebird": "^3.7.2",
     "bootstrap-icons": "^1.11.3",
     "bootswatch": "5.1.3",
@@ -68,9 +70,7 @@
     "simple-git": "^3.22.0",
     "url-parse": "^1.5.10",
     "uuid": "^8.3.1",
-    "vue": "2.6.14",
-    "vue-server-renderer": "2.6.14",
-    "vue-template-compiler": "2.6.14",
+    "vue": "3.3.11",
     "walk-sync": "^2.0.2",
     "winston": "^2.4.4"
   },
@@ -86,6 +86,7 @@
     "@types/jest": "^27.4.1",
     "@types/js-beautify": "^1.13.3",
     "@types/katex": "^0.16.0",
+    "@types/linkify-it": "3.0.5",
     "@types/lodash": "^4.14.181",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.0",
