Remove PR message workflow check for bots
Previously, adding a new contributor triggers a PR message workflow to
check for PR messages. By default, no PR message is added by the bot.

Removing the check for PR messages for bots will likely not affect any
essential checks.

--- a/.github/workflows/pr-message-reminder.yml
+++ b/.github/workflows/pr-message-reminder.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
     remind-pr-author:
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && !endsWith(github.actor, '[bot]')
         runs-on: ubuntu-latest
         permissions:
           contents: read
