--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -36,7 +36,8 @@
     "eslint-plugin-vue": "^7.9.0",
     "floating-vue": "^5.2.2",
     "jest": "^27.5.1",
-    "vue": "3.3.11"
+    "vue": "3.3.11",
+    "vue-style-loader": "^4.1.3"
   },
   "private": true
 }
