--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -25,18 +25,21 @@
     "updatetest": "jest --updateSnapshot"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.26.9",
     "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-env": "^7.26.9",
     "@babel/runtime": "^7.10.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^9.2.1",
     "css-loader": "^3.6.0",
-    "eslint-plugin-vue": "^7.9.0",
+    "eslint-plugin-vue": "^9.32.0",
     "floating-vue": "^5.2.2",
     "jest": "^27.5.1",
+    "portal-vue": "3.0.0",
     "vue": "3.3.11",
+    "vue-eslint-parser": "^9.4.3",
+    "vue-final-modal": "^3.4.11",
     "vue-style-loader": "^4.1.3"
   },
   "private": true
