--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -29,13 +29,16 @@
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.26.9",
     "@babel/runtime": "^7.10.5",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^29.2.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^3.6.0",
     "eslint-plugin-vue": "^9.32.0",
     "floating-vue": "^5.2.2",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "portal-vue": "3.0.0",
     "vue": "3.3.11",
     "vue-eslint-parser": "^9.4.3",
