Update all vue component tests
Skipped tests snapshot updated but continue to be skipped.

--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -21,7 +21,7 @@
     "directory": "packages/vue-components"
   },
   "scripts": {
-    "test": "jest --colors",
+    "test": "jest --clearCache && jest --colors",
     "updatetest": "jest --updateSnapshot"
   },
   "devDependencies": {
