--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@markbind/core": "^5.4.0",
     "danger": "^12.1.0",
-    "postcss": "^8.4.35"
+    "postcss": "^8.4.35",
+    "vue": "3.3.11"
   }
 }
