--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,9 @@
     "prepare": "npm run build",
     "test": "jest --colors"
   },
+  "peerDependencies": {
+    "vue": "3.3.11"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@markbind/core-web": "5.5.3",
@@ -68,7 +71,6 @@
     "simple-git": "^3.22.0",
     "url-parse": "^1.5.10",
     "uuid": "^8.3.1",
-    "vue": "3.3.11",
     "walk-sync": "^2.0.2",
     "winston": "^2.4.4"
   },
