--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -24,6 +24,9 @@
     "test": "jest --clearCache && jest --colors",
     "updatetest": "jest --updateSnapshot"
   },
+  "peerDependencies": {
+    "vue": "3.3.11"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.9",
     "@babel/plugin-transform-runtime": "^7.10.5",
@@ -40,7 +43,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "portal-vue": "3.0.0",
-    "vue": "3.3.11",
     "vue-eslint-parser": "^9.4.3",
     "vue-final-modal": "^3.4.11",
     "vue-style-loader": "^4.1.3"
