--- a/packages/vue-components/package.json
+++ b/packages/vue-components/package.json
@@ -21,28 +21,28 @@
     "directory": "packages/vue-components"
   },
   "scripts": {
-    "test": "jest --colors",
+    "test": "jest --clearCache && jest --colors",
     "updatetest": "jest --updateSnapshot"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.25.0",
-    "@babel/runtime": "^7.10.5",
-    "@vue/test-utils": "^1.3.6",
-    "@vue/vue2-jest": "^27.0.0",
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.26.9",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^29.2.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "css-loader": "^3.6.0",
-    "eslint-plugin-vue": "^7.9.0",
-    "floating-vue": "1.0.0-beta.14",
-    "jest": "^27.5.1",
-    "jest-serializer-vue": "^2.0.2",
-    "portal-vue": "^2.1.7",
-    "vue": "^2.6.14",
-    "vue-final-modal": "^2.4.1",
-    "vue-loader": "^15.9.3"
+    "eslint-plugin-vue": "^9.33.0",
+    "floating-vue": "^5.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "portal-vue": "^3.0.0",
+    "vue": "3.3.11",
+    "vue-final-modal": "^3.4.11",
+    "vue-style-loader": "^4.1.3"
   },
   "private": true
 }
