--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint": "eslint . --ext .js,.ts,.vue && npm run csslint",
     "lintfix": "eslint . --ext .js,.ts,.vue --fix && npm run csslintfix",
     "setup": "npm ci && npm run clean && lerna run prepare",
-    "test": "npm run lint && lerna run test --stream --parallel",
-    "updatetest": "lerna run updatetest --stream --parallel"
+    "test": "npm run lint && lerna run test --stream",
+    "updatetest": "lerna run updatetest --stream"
   },
   "devDependencies": {
     "@stylistic/stylelint-plugin": "^2.1.0",
