--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
       - run: npm run setup
       - run: npm run test
       - name: Upload coverage report to Codecov
+        if: matrix.platform == 'ubuntu-latest'
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
