--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.idea
-.run
 # Logs
 logs
 *.log
@@ -61,9 +59,13 @@ packages/cli/test/functional/test_site/expected/diagrams/usecase.png
 packages/cli/test/functional/test_site/expected/sub_site/inline-output/inline-puml-image.png
 packages/cli/test/functional/test_site_templates/test_project/expected/diagrams/example.png
 
-# vscode configuration
+# Vscode configurations
 .vscode/
 *.iml
+
+# JetBrains configurations
+.idea
+.run
 
 # Compiled files from TypeScript
 *.js.map
